# genai-atdj

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: idea.md  knowledge.md
.claude/hooks/: check_env_access.py  check_outside_project.py
.streamlit/: config.toml
atdj/: config.py
atdj/agent/: edges.py  graph.py  nodes.py  state.py  tools.py
atdj/audio/: __init__.py  adjustment_graph.py  enhancement.py
atdj/cortina/: README_cortina.md  generate_stimuli.py  generator.py  pool.py
atdj/playback/: __init__.py  player.py
atdj/rag/: README_rag.md  debug_one_tanda.py  debug_plan_set.py  debug_select_tanda.py  example_steps.md  fetch.py  ingest.py  plan_set.py  prompt_to_features.py  query.py  select_tanda.py  store.py
atdj/schemas/: README.md  feedback.py  session.py  tanda.py  track.py
atdj/ui/: DESIGN_SYSTEM.md  app.py  audio_player.py  page_main.py
data/: README.md  catalog_dummy.csv  essentia_newsamp.csv  reduced_catalog.csv
data/knowledge_base/: rag_catalog.csv  tango_vs_vals_vs_milonga.md
data/processed/: essentia_milonga.csv  essentia_tango.csv  essentia_vals.csv  librosa_milonga.csv  librosa_vals.csv  todotango_enriched.csv
doc/: BLUEPRINT.md  ai_usage.md  changes_after_merge.md  ideas.md  merge_plan.md  proposal_agent_activity_log.md  proposal_agent_enhancement_node.md  proposal_smart_tanda_scoring.md  todo.md
doc/demo/: proposal_for_demo.md
doc/knowledge/: chroma_values.md  chromadb_vs_csv.md  gradio_vs_streamlit_audio.md  instrument_identification.md  instrument_separation_fine_grained.md  langgraph_vs_langchain_core.md  librosa_vs_essentia.md  pydantic_schema_validation.md  why_langgraph.md
doc/report/: future_work.md  methodology.md
eval_outputs/: eval_01_results.json  eval_01_summary.csv  eval_02_qa_results.json  eval_02_qa_summary.csv  eval_03_cache_results.json  eval_03_cache_summary.csv  eval_04_quality_results.json  eval_04_quality_summary.csv  eval_summary.md
notebooks/: 01_project_setup.ipynb  02_audio_features.ipynb  02_instrument_extraction.ipynb  02_todotango_scraper.ipynb  02a_COT_FeaturePrep.ipynb  02a_data_feature_prep.ipynb  02a_data_feature_prep_v3.ipynb  02b_COT_ComboAverageBestTanda.ipynb  02b_method1_clap.ipynb  02b_method2_cot_llm.ipynb  02b_method3_sbert_direction.ipynb  02c_COT_Analysis_ComboAverageBestTanda.ipynb  02c_analysis_comparison.ipynb  02c_analysis_cot_features.ipynb  02c_analysis_cot_stability.ipynb  02d_tanda_session.ipynb  06_agent_prototype.ipynb  08_enhancement_test.ipynb  generate_rag_catalog.ipynb  test_cortina_generator.ipynb
tests/: README.md  README_rag_tests_eval.md  UI_TEST_GUIDE.md  eval_00_run_all.py  test_audio_resolution.py  test_cortina_fallback.py  test_playback.py  test_schemas.py
tests/test_audio_enhancement/: test_adjustment_graph.py  test_enhancement.py  test_enhancement_params.py
tests/test_rag/: eval_01_pipeline_comparison.py  eval_02_qa_accuracy_latency.py  eval_03_caching_benchmark.py  eval_04_tanda_quality.py  test_answer_feature.py  test_answer_question_real.py  test_answer_question_smoke.py  test_cache_catalog.py  test_cache_features_ranges.py  test_cache_llm_translation.py  test_fetch_complex.py  test_fetch_simple.py  (+2 more)
(+3 files in other folders)
