[project]
name = "genai-atdj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    # WP-01
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    # WP-02
    "mutagen>=1.47",
    "librosa>=0.10",
    "joblib>=1.3",
    # WP-02 scraper
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    # WP-03
    "streamlit>=1.32",
    "pip>=26.0.1",
    "google-genai>=1.70.0",
    "sentence-transformers>=5.3.0",
    "torchvision>=0.26.0",
    "chromadb>=1.5.8",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "openai>=2.32.0",
]

[tool.uv]
# streamlit metadata declares pandas<3; override to allow pandas 3.x
override-dependencies = ["pandas>=3.0.1"]

[tool.pytest.ini_options]
pythonpath = ["."]
