[project]
name = "genai-atdj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    # Project setup — schemas, env, tests
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    # Audio feature extraction
    "mutagen>=1.47",
    "librosa>=0.10",
    "joblib>=1.3",
    # TodoTango metadata scraper
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    # UI and agent stack
    "streamlit>=1.32",
    "pip>=26.0.1",
    "google-genai>=1.70.0",
    "sentence-transformers>=5.3.0",
    "torchvision>=0.26.0",
    "langgraph>=1.1.8",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "chromadb>=1.5.8",
    "noisereduce>=3.0.3",
    "pedalboard>=0.9.22",
    "pyloudnorm>=0.2.0",
    "soundfile>=0.13.1",
    "anthropic>=0.40.0",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
    "langchain-anthropic>=1.4.2",
    "soundcard>=0.4.6",
]

[tool.uv]
# streamlit metadata declares pandas<3; override to allow pandas 3.x
override-dependencies = ["pandas>=3.0.1"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that require a live LLM API key",
]
